--- a/Csharp/LeetcodeTests/LeetcodeTests.csproj
+++ b/Csharp/LeetcodeTests/LeetcodeTests.csproj
@@ -57,7 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Solutions\LongestSubstringWIthoutRepeatingCharsTests.cs" />
+    <Compile Include="Solutions\LeetcodeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
