--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -36,9 +36,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\AddTwoNumbers.cs" />
+    <Compile Include="Solutions\LongestPalindromicSubstring.cs" />
     <Compile Include="Solutions\LongestSubstringWIthoutRepeatingChars.cs" />
     <Compile Include="Solutions\MedianOfTwoSortedArrays.cs" />
+    <Compile Include="Solutions\PalindromeNumber.cs" />
+    <Compile Include="Solutions\ReqularExpressionMatching.cs" />
+    <Compile Include="Solutions\ReverseInterger.cs" />
+    <Compile Include="Solutions\StringToInteger.cs" />
     <Compile Include="Solutions\TwoSum.cs" />
+    <Compile Include="Solutions\ZigZagCoversion.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
