Add the solution of #83 Refactor ListNode with new constructors Refactor Unit Tests

--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Solutions\AddBinary.cs" />
     <Compile Include="Solutions\SqrtOfX.cs" />
     <Compile Include="Solutions\ClimbingStairs.cs" />
+    <Compile Include="Solutions\RemoveDuplicatesFromSortedList.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
