Add solutions of #155, #160 and #167 Add notes for #67, #2, #10, #121 and #107

--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -95,6 +95,9 @@
     <Compile Include="Solutions\ValidPalindrome.cs" />
     <Compile Include="Solutions\SingleNumber.cs" />
     <Compile Include="Solutions\LinkedListCycle.cs" />
+    <Compile Include="Solutions\MinStack.cs" />
+    <Compile Include="Solutions\IntersectionOfTwoLinkedLists.cs" />
+    <Compile Include="Solutions\TwoSum2_InputArrayIsSorted.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
