Add solutions of #168, #169, #171, #36 and #39

--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -98,6 +98,11 @@
     <Compile Include="Solutions\MinStack.cs" />
     <Compile Include="Solutions\IntersectionOfTwoLinkedLists.cs" />
     <Compile Include="Solutions\TwoSum2_InputArrayIsSorted.cs" />
+    <Compile Include="Solutions\ExcelSheetColumnTitle.cs" />
+    <Compile Include="Solutions\MajorityElement.cs" />
+    <Compile Include="Solutions\ExcelSheetColumnNumber.cs" />
+    <Compile Include="Solutions\ValidSudoku.cs" />
+    <Compile Include="Solutions\CombinationSum.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
