Organize folder structure

--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -39,79 +39,150 @@
     <Compile Include="Utils\ListNode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Solutions\AddTwoNumbers.cs" />
-    <Compile Include="Solutions\ContainerWithMostWater.cs" />
-    <Compile Include="Solutions\DevideTwoIntegers.cs" />
-    <Compile Include="Solutions\FourSum.cs" />
-    <Compile Include="Solutions\GenerateParentheses.cs" />
-    <Compile Include="Solutions\Implement_strStr.cs" />
-    <Compile Include="Solutions\IntegerToRoman.cs" />
-    <Compile Include="Solutions\LetterCombinationOfPhone.cs" />
-    <Compile Include="Solutions\LongestCommonPrefix.cs" />
-    <Compile Include="Solutions\LongestPalindromicSubstring.cs" />
-    <Compile Include="Solutions\LongestSubstringWithoutRepeatingChars.cs" />
-    <Compile Include="Solutions\MedianOfTwoSortedArrays.cs" />
-    <Compile Include="Solutions\MergedTwoSortedList.cs" />
-    <Compile Include="Solutions\MergeKSortedLists.cs" />
-    <Compile Include="Solutions\NextPermutation.cs" />
-    <Compile Include="Solutions\PalindromeNumber.cs" />
-    <Compile Include="Solutions\RemoveDuplicateFromSortedArray.cs" />
-    <Compile Include="Solutions\RemoveElement.cs" />
-    <Compile Include="Solutions\RemoveNthNode.cs" />
-    <Compile Include="Solutions\ReqularExpressionMatching.cs" />
-    <Compile Include="Solutions\ReverseInterger.cs" />
-    <Compile Include="Solutions\ReverseNodesInKGroup.cs" />
-    <Compile Include="Solutions\RomanToInteger.cs" />
-    <Compile Include="Solutions\StringToInteger.cs" />
-    <Compile Include="Solutions\SwapNodesInPairs.cs" />
-    <Compile Include="Solutions\ThreeSum.cs" />
-    <Compile Include="Solutions\ThreeSumClosest.cs" />
-    <Compile Include="Solutions\TwoSum.cs" />
-    <Compile Include="Solutions\ValidParentheses.cs" />
-    <Compile Include="Solutions\ZigZagCoversion.cs" />
     <Compile Include="LeetcodeTest.cs" />
-    <Compile Include="Solutions\CountAndSay.cs" />
-    <Compile Include="Solutions\MaximumSubarray.cs" />
-    <Compile Include="Solutions\LengthOfLastWord.cs" />
-    <Compile Include="Solutions\PlusOne.cs" />
-    <Compile Include="Solutions\AddBinary.cs" />
-    <Compile Include="Solutions\SqrtOfX.cs" />
-    <Compile Include="Solutions\ClimbingStairs.cs" />
-    <Compile Include="Solutions\RemoveDuplicatesFromSortedList.cs" />
     <Compile Include="Utils\ToolKit.cs" />
-    <Compile Include="Solutions\MergeSortedArray.cs" />
     <Compile Include="Utils\TreeNode.cs" />
-    <Compile Include="Solutions\SameTree.cs" />
-    <Compile Include="Solutions\SymmetricTree.cs" />
-    <Compile Include="Solutions\MaximumDepthOfBinaryTree.cs" />
-    <Compile Include="Solutions\BinaryTreeLevelOrderTraversal2.cs" />
-    <Compile Include="Solutions\ConvertSortedArrayToBinarySearchTree.cs" />
-    <Compile Include="Solutions\BalancedBinaryTree.cs" />
-    <Compile Include="Solutions\MinimumDepthOfBinaryTree.cs" />
-    <Compile Include="Solutions\PathSum.cs" />
-    <Compile Include="Solutions\PascalsTriangle.cs" />
-    <Compile Include="Solutions\PascalsTriangle2.cs" />
-    <Compile Include="Solutions\BestTimeToBuyAndSellStock.cs" />
-    <Compile Include="Solutions\ValidPalindrome.cs" />
-    <Compile Include="Solutions\SingleNumber.cs" />
-    <Compile Include="Solutions\LinkedListCycle.cs" />
-    <Compile Include="Solutions\MinStack.cs" />
-    <Compile Include="Solutions\IntersectionOfTwoLinkedLists.cs" />
-    <Compile Include="Solutions\TwoSum2_InputArrayIsSorted.cs" />
-    <Compile Include="Solutions\ExcelSheetColumnTitle.cs" />
-    <Compile Include="Solutions\MajorityElement.cs" />
-    <Compile Include="Solutions\ExcelSheetColumnNumber.cs" />
-    <Compile Include="Solutions\ValidSudoku.cs" />
-    <Compile Include="Solutions\CombinationSum.cs" />
-    <Compile Include="Solutions\CombinationSum2.cs" />
-    <Compile Include="Solutions\MultiplyStrings.cs" />
-    <Compile Include="Solutions\Permutations.cs" />
-    <Compile Include="Solutions\Permutations2.cs" />
-    <Compile Include="Solutions\RotateImage.cs" />
+    <Compile Include="0067_AddBinary\AddBinary.cs" />
+    <Compile Include="0002_AddTwoNumbers\AddTwoNumbers.cs" />
+    <Compile Include="0110_BalancedBinaryTree\BalancedBinaryTree.cs" />
+    <Compile Include="0121_BestTimeToBuyAndSellStock\BestTimeToBuyAndSellStock.cs" />
+    <Compile Include="0122_BestTimeToBUyAndSellStock2\BestTimeToBUyAndSellStock2.cs" />
+    <Compile Include="0107_BinaryTreeLevelOrderTraversal2\BinaryTreeLevelOrderTraversal2.cs" />
+    <Compile Include="0070_ClimbingStairs\ClimbingStairs.cs" />
+    <Compile Include="0039_CombinationSum\CombinationSum.cs" />
+    <Compile Include="0040_CombinationSum2\CombinationSum2.cs" />
+    <Compile Include="0011_ContainerWIthMostWater\ContainerWithMostWater.cs" />
+    <Compile Include="0108_ConvertSortedArrayToBinarySearchTree\ConvertSortedArrayToBinarySearchTree.cs" />
+    <Compile Include="0038_CountAndSay\CountAndSay.cs" />
+    <Compile Include="0029_DevideTwoIntegers\DevideTwoIntegers.cs" />
+    <Compile Include="0171_ExcelSheetColumnNumber\ExcelSheetColumnNumber.cs" />
+    <Compile Include="0168_ExcelSheetColumnTitle\ExcelSheetColumnTitle.cs" />
+    <Compile Include="0018_4Sum\FourSum.cs" />
+    <Compile Include="0022_GenerateParentheses\GenerateParentheses.cs" />
+    <Compile Include="0028_Implement_strStr\Implement_strStr.cs" />
+    <Compile Include="0012_IntegerToRoman\IntegerToRoman.cs" />
+    <Compile Include="0160_IntersectionOfTwoLinkedLists\IntersectionOfTwoLinkedLists.cs" />
+    <Compile Include="0058_LengthOfLastWord\LengthOfLastWord.cs" />
+    <Compile Include="0017_LetterCombinationOfPhone\LetterCombinationOfPhone.cs" />
+    <Compile Include="0141_LinkedListCycle\LinkedListCycle.cs" />
+    <Compile Include="0014_LongestCommonPrefix\LongestCommonPrefix.cs" />
+    <Compile Include="0005_LongestPalindromicSubstring\LongestPalindromicSubstring.cs" />
+    <Compile Include="0003_LongestSubstringWithoutRepeatingChars\LongestSubstringWithoutRepeatingChars.cs" />
+    <Compile Include="0169_MajorityElement\MajorityElement.cs" />
+    <Compile Include="0104_MaximumDepthOfBinaryTree\MaximumDepthOfBinaryTree.cs" />
+    <Compile Include="0111_MinimumDepthOfBinaryTree\MinimumDepthOfBinaryTree.cs" />
+    <Compile Include="0053_MaximumSubarray\MaximumSubarray.cs" />
+    <Compile Include="0004_MedianOfTwoSortedArrays\MedianOfTwoSortedArrays.cs" />
+    <Compile Include="0021_MergedTwoSortedList\MergedTwoSortedList.cs" />
+    <Compile Include="0023_MergeKSortedLists\MergeKSortedLists.cs" />
+    <Compile Include="0088_MergeSortedArray\MergeSortedArray.cs" />
+    <Compile Include="0155_MinStack\MinStack.cs" />
+    <Compile Include="0043_MultiplyStrings.cs\MultiplyStrings.cs" />
+    <Compile Include="0031_NextPermutation\NextPermutation.cs" />
+    <Compile Include="0009_PalindromeNumber\PalindromeNumber.cs" />
+    <Compile Include="0118_PascalsTriangle\PascalsTriangle.cs" />
+    <Compile Include="0119_PascalsTriangle2\PascalsTriangle2.cs" />
+    <Compile Include="0112_PathSum\PathSum.cs" />
+    <Compile Include="0046_Permutations\Permutations.cs" />
+    <Compile Include="0047_Permutations2\Permutations2.cs" />
+    <Compile Include="0066_PlusOne\PlusOne.cs" />
+    <Compile Include="0026_RemoveDuplicateFromSortedArray\RemoveDuplicateFromSortedArray.cs" />
+    <Compile Include="0083_RemoveDuplicatesFromSortedList\RemoveDuplicatesFromSortedList.cs" />
+    <Compile Include="0027_RemoveElement\RemoveElement.cs" />
+    <Compile Include="0019_RemoveNthNodeFromEndOfList\RemoveNthNodeFromEndOfList.cs" />
+    <Compile Include="0010_RegularExpressionMatching\RegularExpressionMatching.cs" />
+    <Compile Include="0007_ReverseInterger\ReverseInterger.cs" />
+    <Compile Include="0025_ReverseNodesInKGroup\ReverseNodesInKGroup.cs" />
+    <Compile Include="0013_RomanToInteger\RomanToInteger.cs" />
+    <Compile Include="0048_RotateImage\RotateImage.cs" />
+    <Compile Include="0100_SameTree\SameTree.cs" />
+    <Compile Include="0136_SingleNumber\SingleNumber.cs" />
+    <Compile Include="0069_SqrtOfX\SqrtOfX.cs" />
+    <Compile Include="0008_StringToInteger\StringToInteger.cs" />
+    <Compile Include="0024_SwapNodesInPairs\SwapNodesInPairs.cs" />
+    <Compile Include="0101_SymmetricTree\SymmetricTree.cs" />
+    <Compile Include="0015_ThreeSum\ThreeSum.cs" />
+    <Compile Include="0016_ThreeSumClosest\ThreeSumClosest.cs" />
+    <Compile Include="0001_TwoSum\TwoSum.cs" />
+    <Compile Include="0167_TwoSum2_InputArrayIsSorted\TwoSum2_InputArrayIsSorted.cs" />
+    <Compile Include="0125_ValidPalindrome\ValidPalindrome.cs" />
+    <Compile Include="0020_ValidPalindrome\ValidParentheses.cs" />
+    <Compile Include="0036_ValidSudoku\ValidSudoku.cs" />
+    <Compile Include="0006_ZigZagCoversion\ZigZagCoversion.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="0067_AddBinary\" />
+    <Folder Include="0002_AddTwoNumbers\" />
+    <Folder Include="0110_BalancedBinaryTree\" />
+    <Folder Include="0121_BestTimeToBuyAndSellStock\" />
+    <Folder Include="0122_BestTimeToBUyAndSellStock2\" />
+    <Folder Include="0107_BinaryTreeLevelOrderTraversal2\" />
+    <Folder Include="0070_ClimbingStairs\" />
+    <Folder Include="0039_CombinationSum\" />
+    <Folder Include="0040_CombinationSum2\" />
+    <Folder Include="0011_ContainerWIthMostWater\" />
+    <Folder Include="0108_ConvertSortedArrayToBinarySearchTree\" />
+    <Folder Include="0038_CountAndSay\" />
+    <Folder Include="0029_DevideTwoIntegers\" />
+    <Folder Include="0171_ExcelSheetColumnNumber\" />
+    <Folder Include="0168_ExcelSheetColumnTitle\" />
+    <Folder Include="0018_4Sum\" />
+    <Folder Include="0022_GenerateParentheses\" />
+    <Folder Include="0028_Implement_strStr\" />
+    <Folder Include="0012_IntegerToRoman\" />
+    <Folder Include="0160_IntersectionOfTwoLinkedLists\" />
+    <Folder Include="0058_LengthOfLastWord\" />
+    <Folder Include="0017_LetterCombinationOfPhone\" />
+    <Folder Include="0141_LinkedListCycle\" />
+    <Folder Include="0014_LongestCommonPrefix\" />
+    <Folder Include="0005_LongestPalindromicSubstring\" />
+    <Folder Include="0003_LongestSubstringWithoutRepeatingChars\" />
+    <Folder Include="0169_MajorityElement\" />
+    <Folder Include="0104_MaximumDepthOfBinaryTree\" />
+    <Folder Include="0111_MinimumDepthOfBinaryTree\" />
+    <Folder Include="0053_MaximumSubarray\" />
+    <Folder Include="0004_MedianOfTwoSortedArrays\" />
+    <Folder Include="0021_MergedTwoSortedList\" />
+    <Folder Include="0023_MergeKSortedLists\" />
+    <Folder Include="0088_MergeSortedArray\" />
+    <Folder Include="0155_MinStack\" />
+    <Folder Include="0043_MultiplyStrings.cs\" />
+    <Folder Include="0031_NextPermutation\" />
+    <Folder Include="0009_PalindromeNumber\" />
+    <Folder Include="0118_PascalsTriangle\" />
+    <Folder Include="0119_PascalsTriangle2\" />
+    <Folder Include="0112_PathSum\" />
+    <Folder Include="0046_Permutations\" />
+    <Folder Include="0047_Permutations2\" />
+    <Folder Include="0066_PlusOne\" />
+    <Folder Include="0026_RemoveDuplicateFromSortedArray\" />
+    <Folder Include="0083_RemoveDuplicatesFromSortedList\" />
+    <Folder Include="0027_RemoveElement\" />
+    <Folder Include="0019_RemoveNthNodeFromEndOfList\" />
+    <Folder Include="0010_RegularExpressionMatching\" />
+    <Folder Include="0007_ReverseInterger\" />
+    <Folder Include="0025_ReverseNodesInKGroup\" />
+    <Folder Include="0013_RomanToInteger\" />
+    <Folder Include="0048_RotateImage\" />
+    <Folder Include="0100_SameTree\" />
+    <Folder Include="0136_SingleNumber\" />
+    <Folder Include="0069_SqrtOfX\" />
+    <Folder Include="0008_StringToInteger\" />
+    <Folder Include="0024_SwapNodesInPairs\" />
+    <Folder Include="0101_SymmetricTree\" />
+    <Folder Include="0015_ThreeSum\" />
+    <Folder Include="0016_ThreeSumClosest\" />
+    <Folder Include="0001_TwoSum\" />
+    <Folder Include="0167_TwoSum2_InputArrayIsSorted\" />
+    <Folder Include="0125_ValidPalindrome\" />
+    <Folder Include="0020_ValidPalindrome\" />
+    <Folder Include="0036_ValidSudoku\" />
+    <Folder Include="0006_ZigZagCoversion\" />
+    <Folder Include="Solutions\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
