Add temporary README.md for each solution

--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -114,6 +114,72 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="0002_AddTwoNumbers\README.md" />
+    <None Include="0001_TwoSum\README.md" />
+    <None Include="0003_LongestSubstringWithoutRepeatingChars\README.md" />
+    <None Include="0004_MedianOfTwoSortedArrays\README.md" />
+    <None Include="0005_LongestPalindromicSubstring\README.md" />
+    <None Include="0006_ZigZagCoversion\README.md" />
+    <None Include="0007_ReverseInterger\README.md" />
+    <None Include="0008_StringToInteger\README.md" />
+    <None Include="0009_PalindromeNumber\README.md" />
+    <None Include="0010_RegularExpressionMatching\README.md" />
+    <None Include="0011_ContainerWIthMostWater\README.md" />
+    <None Include="0012_IntegerToRoman\README.md" />
+    <None Include="0013_RomanToInteger\README.md" />
+    <None Include="0014_LongestCommonPrefix\README.md" />
+    <None Include="0015_ThreeSum\README.md" />
+    <None Include="0016_ThreeSumClosest\README.md" />
+    <None Include="0017_LetterCombinationOfPhone\README.md" />
+    <None Include="0018_4Sum\README.md" />
+    <None Include="0019_RemoveNthNodeFromEndOfList\README.md" />
+    <None Include="0020_ValidPalindrome\README.md" />
+    <None Include="0021_MergedTwoSortedList\README.md" />
+    <None Include="0022_GenerateParentheses\README.md" />
+    <None Include="0023_MergeKSortedLists\README.md" />
+    <None Include="0024_SwapNodesInPairs\README.md" />
+    <None Include="0025_ReverseNodesInKGroup\README.md" />
+    <None Include="0026_RemoveDuplicateFromSortedArray\README.md" />
+    <None Include="0027_RemoveElement\README.md" />
+    <None Include="0028_Implement_strStr\README.md" />
+    <None Include="0029_DevideTwoIntegers\README.md" />
+    <None Include="0031_NextPermutation\README.md" />
+    <None Include="0036_ValidSudoku\README.md" />
+    <None Include="0038_CountAndSay\README.md" />
+    <None Include="0039_CombinationSum\README.md" />
+    <None Include="0040_CombinationSum2\README.md" />
+    <None Include="0043_MultiplyStrings.cs\README.md" />
+    <None Include="0046_Permutations\README.md" />
+    <None Include="0047_Permutations2\README.md" />
+    <None Include="0048_RotateImage\README.md" />
+    <None Include="0053_MaximumSubarray\README.md" />
+    <None Include="0058_LengthOfLastWord\README.md" />
+    <None Include="0066_PlusOne\README.md" />
+    <None Include="0067_AddBinary\README.md" />
+    <None Include="0069_SqrtOfX\README.md" />
+    <None Include="0070_ClimbingStairs\README.md" />
+    <None Include="0083_RemoveDuplicatesFromSortedList\README.md" />
+    <None Include="0088_MergeSortedArray\README.md" />
+    <None Include="0100_SameTree\README.md" />
+    <None Include="0101_SymmetricTree\README.md" />
+    <None Include="0104_MaximumDepthOfBinaryTree\README.md" />
+    <None Include="0107_BinaryTreeLevelOrderTraversal2\README.md" />
+    <None Include="0108_ConvertSortedArrayToBinarySearchTree\README.md" />
+    <None Include="0110_BalancedBinaryTree\README.md" />
+    <None Include="0111_MinimumDepthOfBinaryTree\README.md" />
+    <None Include="0112_PathSum\README.md" />
+    <None Include="0118_PascalsTriangle\README.md" />
+    <None Include="0119_PascalsTriangle2\README.md" />
+    <None Include="0121_BestTimeToBuyAndSellStock\README.md" />
+    <None Include="0122_BestTimeToBUyAndSellStock2\README.md" />
+    <None Include="0125_ValidPalindrome\README.md" />
+    <None Include="0136_SingleNumber\README.md" />
+    <None Include="0141_LinkedListCycle\README.md" />
+    <None Include="0155_MinStack\README.md" />
+    <None Include="0160_IntersectionOfTwoLinkedLists\README.md" />
+    <None Include="0167_TwoSum2_InputArrayIsSorted\README.md" />
+    <None Include="0168_ExcelSheetColumnTitle\README.md" />
+    <None Include="0169_MajorityElement\README.md" />
+    <None Include="0171_ExcelSheetColumnNumber\README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="0067_AddBinary\" />
@@ -183,7 +249,6 @@
     <Folder Include="0020_ValidPalindrome\" />
     <Folder Include="0036_ValidSudoku\" />
     <Folder Include="0006_ZigZagCoversion\" />
-    <Folder Include="Solutions\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
