--- a/Csharp/Leetcode/Leetcode.csproj
+++ b/Csharp/Leetcode/Leetcode.csproj
@@ -109,6 +109,9 @@
     <Compile Include="0020_ValidPalindrome\ValidParentheses.cs" />
     <Compile Include="0036_ValidSudoku\ValidSudoku.cs" />
     <Compile Include="0006_ZigZagCoversion\ZigZagCoversion.cs" />
+    <Compile Include="0049_GroupAnagrams\GroupAnagrams.cs" />
+    <Compile Include="0050_PowX_N\PowX_N.cs" />
+    <Compile Include="0054_Spiral Matrix\SpiralMatrix.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -249,6 +252,9 @@
     <Folder Include="0020_ValidPalindrome\" />
     <Folder Include="0036_ValidSudoku\" />
     <Folder Include="0006_ZigZagCoversion\" />
+    <Folder Include="0049_GroupAnagrams\" />
+    <Folder Include="0050_PowX_N\" />
+    <Folder Include="0054_Spiral Matrix\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
